[gd_scene load_steps=9 format=2]

[ext_resource path="res://entities/saving_flag/saving_flag.png" type="Texture" id=1]
[ext_resource path="res://entities/saving_flag/saving_flag.gd" type="Script" id=2]
[ext_resource path="res://entities/saving_flag/saving_flag_area.png" type="Texture" id=5]
[ext_resource path="res://system/parts/part_particle_emitter.tscn" type="PackedScene" id=6]
[ext_resource path="res://system/parts/part_entity_spawner.tscn" type="PackedScene" id=7]

[sub_resource type="CircleShape2D" id=1]
radius = 60.0

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=5]
resource_name = "blink"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, true, false, true, false ]
}

[node name="saving_flag" type="Node2D"]
script = ExtResource( 2 )

[node name="flag_sprite" type="Sprite" parent="."]
position = Vector2( -5, -19 )
texture = ExtResource( 1 )
centered = false

[node name="flag_overlay" type="Sprite" parent="."]
modulate = Color( 1, 1, 0, 1 )
position = Vector2( -5, -19 )
texture = ExtResource( 1 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 18, 21 )

[node name="saving_area" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="saving_area"]
shape = SubResource( 1 )

[node name="area_sprite" type="Sprite" parent="saving_area"]
texture = ExtResource( 5 )

[node name="lifetime_timer" type="Timer" parent="."]
wait_time = 12.0
one_shot = true
autostart = true

[node name="blink_animation_player" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 4 )
anims/blink = SubResource( 5 )

[node name="part_particle_emitter" parent="." instance=ExtResource( 6 )]
particle_id = "progress_saved_indicator"

[node name="rock_spawner" parent="." instance=ExtResource( 7 )]
position = Vector2( 24, 24 )
entity_name = "stone_drop"
entity_group = "drops"
deletion_signal = "interacted"
auto_spawn = true
respawn = true
respawn_delay = 1.0
respawn_radius = Vector2( 5, 5 )

[node name="rock_spawner2" parent="." instance=ExtResource( 7 )]
position = Vector2( -24, -32 )
entity_name = "stone_drop"
entity_group = "drops"
deletion_signal = "interacted"
auto_spawn = true
respawn = true
respawn_delay = 1.0
respawn_radius = Vector2( 5, 5 )

[node name="rock_spawner3" parent="." instance=ExtResource( 7 )]
entity_name = "stone_drop"
entity_group = "drops"
deletion_signal = "interacted"
auto_spawn = true
respawn = true
respawn_delay = 1.0
respawn_radius = Vector2( 5, 5 )

[connection signal="deleted" from="." to="part_particle_emitter" method="emit_particle"]
[connection signal="body_entered" from="saving_area" to="." method="_on_saving_area_body_entered"]
[connection signal="body_exited" from="saving_area" to="." method="_on_saving_area_body_exited"]
[connection signal="timeout" from="lifetime_timer" to="." method="_on_lifetime_timer_timeout"]
[connection signal="animation_finished" from="blink_animation_player" to="." method="_on_blink_animation_player_animation_finished"]
